--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,8 @@ services:
       interval: 5s
       timeout: 5s
       retries: 5
+    networks:
+      - app-network
 
   backend:
     build: ./backend
@@ -31,6 +33,8 @@ services:
     volumes:
       - ./backend:/app
     restart: always
+    networks:
+      - app-network
 
   frontend:
     build: ./frontend
@@ -38,10 +42,17 @@ services:
       - "3000:80"
     volumes:
       - ./frontend:/app
-      - /app/node_modules
+      - frontend_node_modules:/app/node_modules
     depends_on:
       - backend
     restart: always
+    networks:
+      - app-network
+
+networks:
+  app-network:
+    driver: bridge
 
 volumes:
-  postgres_data: 
+  postgres_data:
+  frontend_node_modules: 
