--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -8,6 +8,7 @@ charset-normalizer==3.4.1
 click==8.1.8
 distro==1.9.0
 ecdsa==0.19.0
+email-validator==2.1.1
 fastapi==0.115.11
 h11==0.14.0
 httpcore==1.0.7
