--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -8,6 +8,7 @@ server {
     add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
     add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
+    # Root location for frontend assets
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
@@ -15,14 +16,17 @@ server {
     }
 
     # Proxy API requests to the backend
-    location /api {
-        proxy_pass http://backend:8000;
+    location /api/ {
+        # Remove /api prefix when forwarding to backend
+        proxy_pass http://backend:8000/api/;
+        
+        # Standard proxy headers
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         
-        # Handle OPTIONS requests for CORS
+        # CORS headers for preflight requests
         if ($request_method = 'OPTIONS') {
             add_header 'Access-Control-Allow-Origin' '*' always;
             add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
@@ -35,8 +39,8 @@ server {
     }
 
     # Proxy docs requests to the backend
-    location /docs {
-        proxy_pass http://backend:8000;
+    location /docs/ {
+        proxy_pass http://backend:8000/docs/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -44,8 +48,8 @@ server {
     }
 
     # Proxy redoc requests to the backend
-    location /redoc {
-        proxy_pass http://backend:8000;
+    location /redoc/ {
+        proxy_pass http://backend:8000/redoc/;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -54,7 +58,7 @@ server {
 
     # Proxy openapi.json requests to the backend
     location /openapi.json {
-        proxy_pass http://backend:8000;
+        proxy_pass http://backend:8000/openapi.json;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
