Fix API URL and nginx proxy configuration

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -18,7 +18,7 @@ server {
     # Proxy API requests to the backend
     location /api/ {
         # Remove /api prefix when forwarding to backend
-        proxy_pass http://backend:8000/api/;
+        proxy_pass http://backend:8000/;
         
         # Standard proxy headers
         proxy_set_header Host $host;
