Fix Python 3.10 compatibility issue and update domain to actaai.sabina-strategies.com

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -8,7 +8,7 @@ SECRET_KEY=your-secret-key-here
 API_V1_STR=/api/v1
 
 # CORS settings (comma-separated list of origins)
-CORS_ORIGINS=["https://your-domain.com", "http://localhost:3000"]
+CORS_ORIGINS=["https://actaai.sabina-strategies.com", "http://localhost:3000"]
 
 # OpenAI
 OPENAI_API_KEY=your-openai-api-key-here
