--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name localhost 24.144.116.59;
+    server_name localhost 24.144.116.59 actaai.sabina-strategies.com;
 
     # Add CORS headers
     add_header 'Access-Control-Allow-Origin' '*' always;
