--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -52,8 +52,8 @@ http {
 
   # Default security headers for all responses
   map $sent_http_content_type $content_security_policy {
-    default "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' api.yourdomain.com";
-    "~*text/html" "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' api.yourdomain.com";
+    default "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' actaai.sabina-strategies.com";
+    "~*text/html" "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' actaai.sabina-strategies.com";
   }
 
   # Rate limiting
@@ -77,7 +77,7 @@ http {
   # Main server configuration
   server {
     listen 80;
-    server_name acta-ai.yourdomain.com;
+    server_name actaai.sabina-strategies.com;
     
     # Redirect all HTTP requests to HTTPS
     return 301 https://$host$request_uri;
@@ -85,7 +85,7 @@ http {
 
   server {
     listen 443 ssl http2;
-    server_name acta-ai.yourdomain.com;
+    server_name actaai.sabina-strategies.com;
 
     ssl_certificate /etc/nginx/ssl/acta-ai.crt;
     ssl_certificate_key /etc/nginx/ssl/acta-ai.key;
