--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -59,6 +59,8 @@ http {
   # Rate limiting
   limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
   limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
+  # Rate limiting for login
+  limit_req_zone $binary_remote_addr zone=login:10m rate=1r/s;
   
   # Status endpoint for Prometheus metrics collection
   server {
@@ -84,7 +86,9 @@ http {
   }
 
   server {
-    listen 443 ssl http2;
+    listen 443 ssl;
+    listen [::]:443 ssl;
+    http2 on;
     server_name actaai.sabina-strategies.com;
 
     ssl_certificate /etc/nginx/ssl/acta-ai.crt;
@@ -100,9 +104,6 @@ http {
     add_header Content-Security-Policy $content_security_policy always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
     add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
-    
-    # Configure rate limiting to prevent brute force attacks
-    limit_req_zone $binary_remote_addr zone=login:10m rate=1r/s;
     
     # Frontend
     location / {
