Fix nginx configuration for backend resolution and SSL setup

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,6 +27,14 @@ http {
   types_hash_max_size 2048;
   server_tokens off;
 
+  # Add resolver for Docker internal DNS
+  resolver 127.0.0.11 valid=30s;
+  
+  # Define backend upstream with variable
+  upstream backend_servers {
+    server backend:8000;
+  }
+
   # GZIP compression
   gzip on;
   gzip_disable "msie6";
@@ -48,7 +56,7 @@ http {
   ssl_stapling_verify on;
   
   # DH parameters for improved security
-  ssl_dhparam /etc/nginx/ssl/dhparam.pem; # Generate with: openssl dhparam -out /etc/nginx/ssl/dhparam.pem 2048
+  ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
   # Default security headers for all responses
   map $sent_http_content_type $content_security_policy {
@@ -76,15 +84,65 @@ http {
     }
   }
 
-  # Main server configuration
+  # HTTP Server - Accept connections on port 80
   server {
     listen 80;
-    server_name actaai.sabina-strategies.com;
+    listen [::]:80;
+    server_name actaai.sabina-strategies.com localhost;
     
-    # Redirect all HTTP requests to HTTPS
-    return 301 https://$host$request_uri;
+    # Frontend
+    location / {
+      root /usr/share/nginx/html;
+      index index.html index.htm;
+      try_files $uri $uri/ /index.html;
+    }
+
+    # Backend API
+    location /api/ {
+      proxy_pass http://backend_servers/api/;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_cache_bypass $http_upgrade;
+      
+      # Allow larger uploads for templates
+      client_max_body_size 10M;
+    }
+    
+    # Apply rate limiting to login endpoint
+    location /api/auth/login {
+      proxy_pass http://backend_servers/api/auth/login;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      
+      # Rate limiting zone
+      limit_req zone=login burst=5 nodelay;
+    }
+    
+    # Custom error pages
+    error_page 404 /404.html;
+    location = /404.html {
+      root /usr/share/nginx/html;
+      internal;
+    }
+    
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+      root /usr/share/nginx/html;
+      internal;
+    }
   }
 
+  # HTTPS Server - Use this once SSL is properly set up
   server {
     listen 443 ssl;
     listen [::]:443 ssl;
@@ -114,7 +172,7 @@ http {
 
     # Backend API
     location /api/ {
-      proxy_pass http://backend:8000/api/;
+      proxy_pass http://backend_servers/api/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
@@ -130,7 +188,7 @@ http {
     
     # Apply rate limiting to login endpoint
     location /api/auth/login {
-      proxy_pass http://backend:8000/api/auth/login;
+      proxy_pass http://backend_servers/api/auth/login;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection 'upgrade';
