--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -26,7 +26,11 @@ server {
 
     # Proxy API requests to the backend
     location /api {
-        proxy_pass http://backend:8000;
+        # Use resolver for Docker DNS
+        resolver 127.0.0.11 valid=30s;
+        set $backend_upstream backend:8000;
+        proxy_pass http://$backend_upstream;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -40,7 +44,11 @@ server {
 
     # Proxy docs requests to the backend
     location /docs {
-        proxy_pass http://backend:8000;
+        # Use resolver for Docker DNS
+        resolver 127.0.0.11 valid=30s;
+        set $backend_upstream backend:8000;
+        proxy_pass http://$backend_upstream;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -49,7 +57,11 @@ server {
 
     # Proxy redoc requests to the backend
     location /redoc {
-        proxy_pass http://backend:8000;
+        # Use resolver for Docker DNS
+        resolver 127.0.0.11 valid=30s;
+        set $backend_upstream backend:8000;
+        proxy_pass http://$backend_upstream;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -58,7 +70,11 @@ server {
 
     # Proxy openapi.json requests to the backend
     location /openapi.json {
-        proxy_pass http://backend:8000;
+        # Use resolver for Docker DNS
+        resolver 127.0.0.11 valid=30s;
+        set $backend_upstream backend:8000;
+        proxy_pass http://$backend_upstream;
+        
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
