--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
       - DATABASE_URL=postgresql+asyncpg://postgres:postgres@postgres:5432/acta_ai
       - SECRET_KEY=${SECRET_KEY:-supersecretkey}
       - ENVIRONMENT=development
-      - CORS_ORIGINS=["http://localhost:3000"]
+      - CORS_ORIGINS=["http://localhost:3000", "http://localhost", "http://frontend", "http://24.144.116.59", "http://actaai.sabina-strategies.com"]
       - OPENAI_API_KEY=${OPENAI_API_KEY}
       - PROMETHEUS_MULTIPROC_DIR=/tmp
       - LOG_LEVEL=INFO
@@ -79,14 +79,12 @@ services:
         max-size: "10m"
         max-file: "3"
 
-  # Nginx for SSL and routing
+  # Nginx for routing
   nginx:
     image: nginx:1.25-alpine
     restart: unless-stopped
     ports:
       - "80:80"
-      - "443:443"
-      - "8081:8081"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./nginx/ssl:/etc/nginx/ssl:ro
@@ -97,7 +95,7 @@ services:
     networks:
       - app_network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8000/api/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:80"]
       interval: 30s
       timeout: 10s
       retries: 3
