--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -45,18 +45,18 @@ http {
   gzip_http_version 1.1;
   gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
 
-  # SSL configuration
-  ssl_protocols TLSv1.2 TLSv1.3;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
-  ssl_session_cache shared:SSL:10m;
-  ssl_session_timeout 1d;
-  ssl_session_tickets off;
-  ssl_stapling on;
-  ssl_stapling_verify on;
+  # SSL configuration - commented out until proper certificates are set up
+  # ssl_protocols TLSv1.2 TLSv1.3;
+  # ssl_prefer_server_ciphers on;
+  # ssl_ciphers 'ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384';
+  # ssl_session_cache shared:SSL:10m;
+  # ssl_session_timeout 1d;
+  # ssl_session_tickets off;
+  # ssl_stapling on;
+  # ssl_stapling_verify on;
   
-  # DH parameters for improved security
-  ssl_dhparam /etc/nginx/ssl/dhparam.pem;
+  # DH parameters for improved security - commented out until proper certificates are set up
+  # ssl_dhparam /etc/nginx/ssl/dhparam.pem;
 
   # Default security headers for all responses
   map $sent_http_content_type $content_security_policy {
@@ -89,71 +89,6 @@ http {
     listen 80;
     listen [::]:80;
     server_name actaai.sabina-strategies.com localhost;
-    
-    # Frontend
-    location / {
-      root /usr/share/nginx/html;
-      index index.html index.htm;
-      try_files $uri $uri/ /index.html;
-    }
-
-    # Backend API
-    location /api/ {
-      proxy_pass http://backend_servers/api/;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_cache_bypass $http_upgrade;
-      
-      # Allow larger uploads for templates
-      client_max_body_size 10M;
-    }
-    
-    # Apply rate limiting to login endpoint
-    location /api/auth/login {
-      proxy_pass http://backend_servers/api/auth/login;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection 'upgrade';
-      proxy_set_header Host $host;
-      proxy_set_header X-Real-IP $remote_addr;
-      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-      proxy_set_header X-Forwarded-Proto $scheme;
-      
-      # Rate limiting zone
-      limit_req zone=login burst=5 nodelay;
-    }
-    
-    # Custom error pages
-    error_page 404 /404.html;
-    location = /404.html {
-      root /usr/share/nginx/html;
-      internal;
-    }
-    
-    error_page 500 502 503 504 /50x.html;
-    location = /50x.html {
-      root /usr/share/nginx/html;
-      internal;
-    }
-  }
-
-  # HTTPS Server - Use this once SSL is properly set up
-  server {
-    listen 443 ssl;
-    listen [::]:443 ssl;
-    http2 on;
-    server_name actaai.sabina-strategies.com;
-
-    ssl_certificate /etc/nginx/ssl/acta-ai.crt;
-    ssl_certificate_key /etc/nginx/ssl/acta-ai.key;
-
-    # Add more secure HSTS header
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
     
     # Security headers
     add_header X-Content-Type-Options "nosniff" always;
@@ -214,4 +149,78 @@ http {
       internal;
     }
   }
+
+  # HTTPS Server - Use this once SSL is properly set up
+  # Commented out until proper SSL certificates are available
+  # server {
+  #   listen 443 ssl;
+  #   listen [::]:443 ssl;
+  #   http2 on;
+  #   server_name actaai.sabina-strategies.com;
+
+  #   ssl_certificate /etc/nginx/ssl/acta-ai.crt;
+  #   ssl_certificate_key /etc/nginx/ssl/acta-ai.key;
+
+  #   # Add more secure HSTS header
+  #   add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload" always;
+    
+  #   # Security headers
+  #   add_header X-Content-Type-Options "nosniff" always;
+  #   add_header X-Frame-Options "SAMEORIGIN" always;
+  #   add_header X-XSS-Protection "1; mode=block" always;
+  #   add_header Content-Security-Policy $content_security_policy always;
+  #   add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+  #   add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    
+  #   # Frontend
+  #   location / {
+  #     root /usr/share/nginx/html;
+  #     index index.html index.htm;
+  #     try_files $uri $uri/ /index.html;
+  #   }
+
+  #   # Backend API
+  #   location /api/ {
+  #     proxy_pass http://backend_servers/api/;
+  #     proxy_http_version 1.1;
+  #     proxy_set_header Upgrade $http_upgrade;
+  #     proxy_set_header Connection 'upgrade';
+  #     proxy_set_header Host $host;
+  #     proxy_set_header X-Real-IP $remote_addr;
+  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #     proxy_set_header X-Forwarded-Proto $scheme;
+  #     proxy_cache_bypass $http_upgrade;
+      
+  #     # Allow larger uploads for templates
+  #     client_max_body_size 10M;
+  #   }
+    
+  #   # Apply rate limiting to login endpoint
+  #   location /api/auth/login {
+  #     proxy_pass http://backend_servers/api/auth/login;
+  #     proxy_http_version 1.1;
+  #     proxy_set_header Upgrade $http_upgrade;
+  #     proxy_set_header Connection 'upgrade';
+  #     proxy_set_header Host $host;
+  #     proxy_set_header X-Real-IP $remote_addr;
+  #     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+  #     proxy_set_header X-Forwarded-Proto $scheme;
+      
+  #     # Rate limiting zone
+  #     limit_req zone=login burst=5 nodelay;
+  #   }
+    
+  #   # Custom error pages
+  #   error_page 404 /404.html;
+  #   location = /404.html {
+  #     root /usr/share/nginx/html;
+  #     internal;
+  #   }
+    
+  #   error_page 500 502 503 504 /50x.html;
+  #   location = /50x.html {
+  #     root /usr/share/nginx/html;
+  #     internal;
+  #   }
+  # }
 } 
