--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,6 +6,7 @@ pydantic-settings>=2.0.3
 httpx>=0.25.1
 python-jose>=3.3.0
 python-multipart>=0.0.6
+email-validator>=2.1.0
 
 # Database
 sqlalchemy>=2.0.23
