--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -64,10 +64,9 @@ http {
     "~*text/html" "default-src 'self'; script-src 'self' 'unsafe-inline'; style-src 'self' 'unsafe-inline'; img-src 'self' data:; font-src 'self' data:; connect-src 'self' actaai.sabina-strategies.com";
   }
 
-  # Rate limiting
+  # Rate limiting zones - moved to correct location in http context
   limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
   limit_conn_zone $binary_remote_addr zone=conn_limit:10m;
-  # Rate limiting for login
   limit_req_zone $binary_remote_addr zone=login:10m rate=1r/s;
   
   # Status endpoint for Prometheus metrics collection
@@ -88,7 +87,18 @@ http {
   server {
     listen 80;
     listen [::]:80;
-    server_name actaai.sabina-strategies.com localhost;
+    server_name actaai.sabina-strategies.com localhost 24.144.116.59;
+    
+    # Global CORS headers
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' 'GET, POST, PUT, DELETE, OPTIONS' always;
+    add_header 'Access-Control-Allow-Headers' 'Origin, X-Requested-With, Content-Type, Accept, Authorization' always;
+    add_header 'Access-Control-Max-Age' 1728000 always;
+    
+    # Handle preflight requests
+    if ($request_method = 'OPTIONS') {
+        return 204;
+    }
     
     # Security headers
     add_header X-Content-Type-Options "nosniff" always;
@@ -119,6 +129,42 @@ http {
       
       # Allow larger uploads for templates
       client_max_body_size 10M;
+    }
+    
+    # Proxy docs requests to the backend
+    location /docs {
+      proxy_pass http://backend_servers/docs;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy redoc requests to the backend
+    location /redoc {
+      proxy_pass http://backend_servers/redoc;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # Proxy openapi.json requests to the backend
+    location /openapi.json {
+      proxy_pass http://backend_servers/openapi.json;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection 'upgrade';
+      proxy_set_header Host $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
     }
     
     # Apply rate limiting to login endpoint
