feat: add initial Shopify connect flow and UI enablement

--- a/.env.example
+++ b/.env.example
@@ -14,5 +14,15 @@ ENCRYPTION_KEY=
 # Unsplash — optional, for stock photo featured images
 UNSPLASH_ACCESS_KEY=
 
+# App URLs (used for Shopify OAuth callback redirects)
+BACKEND_BASE_URL=http://localhost:8000
+FRONTEND_URL=http://localhost:5173
+
+# Shopify public app credentials
+SHOPIFY_APP_CLIENT_ID=
+SHOPIFY_APP_CLIENT_SECRET=
+SHOPIFY_SCOPES=read_content,write_content
+SHOPIFY_API_VERSION=2026-01
+
 # These are set automatically by docker-compose.yml (no need to set here):
 # DATABASE_URL, CORS_ORIGINS, ENVIRONMENT, DEBUG
