Fix Shopify OAuth config + require author on articleCreate

--- a/shopify-app/acta-blog-publisher/shopify.app.toml
+++ b/shopify-app/acta-blog-publisher/shopify.app.toml
@@ -7,7 +7,6 @@ embedded = true
 
 [build]
 automatically_update_urls_on_dev = true
-include_config_on_deploy = true
 
 [webhooks]
 api_version = "2026-04"
@@ -23,6 +22,12 @@ api_version = "2026-04"
 [access_scopes]
 # Learn more at https://shopify.dev/docs/apps/tools/cli/configuration#access_scopes
 scopes = "read_content,write_content"
+optional_scopes = [ ]
+use_legacy_install_flow = false
 
 [auth]
-redirect_urls = [ "https://example.com/api/auth" ]
+redirect_urls = [
+  "https://example.com/api/auth",
+  "http://127.0.0.1:8000/api/v1/shopify/callback",
+  "http://localhost:8000/api/v1/shopify/callback"
+]
