Add auth rate limiting for register token and refresh endpoints

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,11 @@
 
 # Auth — generate with: python -c "import secrets; print(secrets.token_urlsafe(32))"
 SECRET_KEY=change-me-in-production
+RATE_LIMIT_STORAGE_URI=memory://
+RATE_LIMIT_TRUST_PROXY_HEADERS=false
+RATE_LIMIT_AUTH_REGISTER=5/minute
+RATE_LIMIT_AUTH_TOKEN=5/minute
+RATE_LIMIT_AUTH_REFRESH=5/minute
 
 # OpenAI — required for content generation
 OPENAI_API_KEY=sk-...
