--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,3 +6,10 @@ CORS_ORIGINS=["http://localhost:5173"]
 ENVIRONMENT=development
 LOG_LEVEL=INFO
 DEBUG=true
+
+# Rate limiting
+RATE_LIMIT_STORAGE_URI=memory://
+RATE_LIMIT_TRUST_PROXY_HEADERS=false
+RATE_LIMIT_AUTH_REGISTER=5/minute
+RATE_LIMIT_AUTH_TOKEN=5/minute
+RATE_LIMIT_AUTH_REFRESH=5/minute
