Add production nginx security headers and TLS rollout plan

--- a/frontend/nginx.tls.conf
+++ b/frontend/nginx.tls.conf
@@ -1,11 +1,51 @@
+##
+# Production TLS nginx template for Acta AI.
+# Use this as your deployment config at /etc/nginx/conf.d/acta.conf.
+# Replace `acta.example.com` with your real domain.
+##
+
 server {
     listen 80;
-    server_name _;
+    listen [::]:80;
+    server_name acta.example.com www.acta.example.com;
+
+    # ACME challenge path for certbot renewals.
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+    }
+
+    location / {
+        return 301 https://$host$request_uri;
+    }
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+    server_name acta.example.com www.acta.example.com;
+
+    # TLS certificates (Let's Encrypt example paths).
+    ssl_certificate /etc/letsencrypt/live/acta.example.com/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/acta.example.com/privkey.pem;
+
+    # TLS hardening.
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers off;
+    ssl_session_timeout 1d;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
+
+    # OCSP stapling.
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 valid=300s;
+    resolver_timeout 5s;
 
     root /usr/share/nginx/html;
     index index.html;
 
-    # Security headers (HTTP-safe set; HSTS is defined in the TLS config template).
+    # Security headers.
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options "DENY" always;
     add_header Referrer-Policy "strict-origin-when-cross-origin" always;
@@ -14,36 +54,38 @@ server {
     add_header Cross-Origin-Resource-Policy "same-origin" always;
     add_header Content-Security-Policy "default-src 'self'; script-src 'self'; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https: wss:; frame-ancestors 'none'; base-uri 'self'; form-action 'self'" always;
 
-    # Gzip compression
+    # Gzip compression.
     gzip on;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml text/javascript image/svg+xml;
     gzip_min_length 256;
 
-    # Proxy API requests to the backend
+    # Proxy API requests to the backend service.
     location /api/ {
         proxy_pass http://backend:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_http_version 1.1;
 
-        # SSE support (content streaming, revision streaming)
+        # SSE support (content streaming, revision streaming).
         proxy_buffering off;
         proxy_cache off;
         proxy_read_timeout 300s;
     }
 
-    # SPA fallback — serve index.html for all non-file routes
+    # SPA fallback.
     location / {
         try_files $uri $uri/ /index.html;
     }
 
-    # Cache static assets
+    # Cache static assets.
     location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable" always;
 
         # Re-declare security headers because add_header in location blocks does not inherit.
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header X-Frame-Options "DENY" always;
         add_header Referrer-Policy "strict-origin-when-cross-origin" always;
