--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -23,7 +23,7 @@ python-dotenv==1.0.1
 httpx==0.27.2
 
 # AI
-openai>=1.75.0,<2.0.0
+openai==1.109.1
 
 # Content processing
 markdown==3.7
@@ -33,10 +33,10 @@ markdownify==0.14.1
 apscheduler==3.10.4
 
 # Payments
-stripe>=11.0.0
+stripe==14.3.0
 
 # PDF generation
-reportlab>=4.0
+reportlab==4.4.10
 
 # Encryption
 cryptography==46.0.5
